[tool.poetry]
name = "mchub"
version = "10.2.0"
description = ""
authors = ["Frédéric Fortier-Chouinard", "Félix-Antoine Fortin <felix-antoine.fortin@calculquebec.ca>"]
license = "BSD 3"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "~2.1.0"
Flask-SQLAlchemy = "~2.5.1"
SQLAlchemy = "~1.4.36"
humanize = "^4.0.0"
marshmallow = "~3.19.0"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
openstacksdk = "^1.0.0"
jsonpath-ng = "~1.5.3"
Flask-Cors = "~3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-flask = "^1.2.0"
pytest-mock = "^3.10.0"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
